fix: user login and get jwt
