# middleware/auth.go
@@ -1,27 +1,54 @@
 package middleware
 
 import (
-	"time"
+	"errors"
+	"fmt"
+	"net/http"
+	"strings"
 
-	"github.com/CodeHanHan/ferry-backend/handler"
-	jwt "github.com/CodeHanHan/ferry-backend/pkg/jwtauth"
-	"github.com/CodeHanHan/ferry-backend/pkg/pi"
+	"github.com/CodeHanHan/ferry-backend/pkg/token"
+	"github.com/gin-gonic/gin"
 )
 
-func AuthInit() (*jwt.GinJWTMiddleware, error) {
-	return jwt.New(&jwt.GinJWTMiddleware{
-		Realm:           "test zone",
-		Key:             []byte(pi.Global.Cfg.Jwt.Secret),
-		Timeout:         time.Hour,
-		MaxRefresh:      time.Hour,
-		PayloadFunc:     handler.PayloadFunc,
-		IdentityHandler: handler.IdentityHandler,
-		Authenticator:   handler.Authenticator,
-		Authorizator:    handler.Authorizator,
-		Unauthorized:    handler.Unauthorized,
-		TokenLookup:     "header: Authorization, query: token, cookie: jwt",
-		TokenHeadName:   "Bearer",
-		TimeFunc:        time.Now,
-	})
+const (
+	authorizationHeaderKey  = "authorization"
+	authorizationTypeBearer = "bearer"
+	authorizationPayloadKey = "authorization_payload"
+)
 
+// AuthMiddleware creates a gin middleware for authorization
+func AuthMiddleware(tokenMaker token.Maker) gin.HandlerFunc {
+	return func(ctx *gin.Context) {
+		authorizationHeader := ctx.GetHeader(authorizationHeaderKey)
+
+		if len(authorizationHeader) == 0 {
+			err := errors.New("authorization header is not provided")
+			ctx.AbortWithStatusJSON(http.StatusUnauthorized, err)
+			return
+		}
+
+		fields := strings.Fields(authorizationHeader)
+		if len(fields) < 2 {
+			err := errors.New("invalid authorization header format")
+			ctx.AbortWithStatusJSON(http.StatusUnauthorized, err)
+			return
+		}
+
+		authorizationType := strings.ToLower(fields[0])
+		if authorizationType != authorizationTypeBearer {
+			err := fmt.Errorf("unsupported authorization type %s", authorizationType)
+			ctx.AbortWithStatusJSON(http.StatusUnauthorized, err)
+			return
+		}
+
+		accessToken := fields[1]
+		payload, err := tokenMaker.VerifyToken(accessToken)
+		if err != nil {
+			ctx.AbortWithStatusJSON(http.StatusUnauthorized, err)
+			return
+		}
+
+		ctx.Set(authorizationPayloadKey, payload)
+		ctx.Next()
+	}
 }
